--- a/anger.html
+++ b/anger.html
@@ -12,10 +12,10 @@
         <div class="quiz">
             <h2 id="questions">how often you feel Angry</h2>
             <div class="answer-button">
-                <button class="btn">10-not very much</button>
-                <button class="btn">20-sometimes</button>
-                <button class="btn">30-quite often</button>
-                <button class="btn">40-many times</button>
+                <button class="btn" onClick={addScore(10,0)}>10-not very much</button>
+                <button class="btn" onClick={addScore(20,0)}>20-sometimes</button>
+                <button class="btn" onClick={addScore(30,0)}>30-quite often</button>
+                <button class="btn" onClick={addScore(40,0)}>40-many times</button>
             </div>
             <button id="next-btn">
                 Next question
@@ -27,10 +27,10 @@
         <div class="quiz">
             <h2 id="questions">how often you feel that your anger is getting out of control</h2>
             <div class="answer-button">
-                <button class="btn">10-not very much</button>
-                <button class="btn">20-sometimes</button>
-                <button class="btn">30-quite often</button>
-                <button class="btn">40-many times</button>
+                <button class="btn" onClick={addScore(10,1)}>10-not very much</button>
+                <button class="btn" onClick={addScore(20,1)}>20-sometimes</button>
+                <button class="btn" onClick={addScore(30,1)}>30-quite often</button>
+                <button class="btn" onClick={addScore(40,1)}>40-many times</button>
             </div>
             <button id="next-btn">
                 Next question
@@ -42,10 +42,10 @@
         <div class="quiz">
             <h2 id="questions">how often you control your Anger </h2>
             <div class="answer-button">
-                <button class="btn">10-not very much</button>
-                <button class="btn">20-sometimes</button>
-                <button class="btn">30-quite often</button>
-                <button class="btn">40-many times</button>
+                <button class="btn" onClick={addScore(10,2)}>10-not very much</button>
+                <button class="btn" onClick={addScore(20,2)}>20-sometimes</button>
+                <button class="btn" onClick={addScore(30,2)}>30-quite often</button>
+                <button class="btn" onClick={addScore(40,2)}>40-many times</button>
             </div>
             <button id="next-btn">
                 Next question
@@ -57,10 +57,10 @@
         <div class="quiz">
             <h2 id="questions">how often you feel that your anger can hurt someone</h2>
             <div class="answer-button">
-                <button class="btn">10-not very much</button>
-                <button class="btn">20-sometimes</button>
-                <button class="btn">30-quite often</button>
-                <button class="btn">40-many times</button>
+                <button class="btn" onClick={addScore(10,3)}>10-not very much</button>
+                <button class="btn" onClick={addScore(20,3)}>20-sometimes</button>
+                <button class="btn" onClick={addScore(30,3)}>30-quite often</button>
+                <button class="btn" onClick={addScore(40,3)}>40-many times</button>
             </div>
             <button id="next-btn">
                 Next question
@@ -72,10 +72,10 @@
         <div class="quiz">
             <h2 id="questions">how often you feel sad</h2>
             <div class="answer-button">
-                <button class="btn">10-not very much</button>
-                <button class="btn">20-sometimes</button>
-                <button class="btn">30-quite often</button>
-                <button class="btn">40-many times</button>
+                <button class="btn" onClick={addScore(10,4)}>10-not very much</button>
+                <button class="btn" onClick={addScore(20,4)}>20-sometimes</button>
+                <button class="btn" onClick={addScore(30,4)}>30-quite often</button>
+                <button class="btn" onClick={addScore(40,4)}>40-many times</button>
             </div>
             <button id="next-btn">
                 Next question
